<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC Tag File Sharing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nfc_writer">NfcWriterActivity</string>
    <string name="title_activity_nfc_reader">NfcReaderActivity</string>
    <string name="title_activity_drop_box">DropBoxActivity</string>
    <string name="TagWrite">touch tag to start writing</string>
    <string name="BrowseFile">press the folder to choose your file</string>
    <string name="DialogTitle">File too big!</string>
    <string name="DialogMessage">Upload the file to Dropbox and write the link instead?</string>
    <string name="DialogPositiveButton">Upload</string>
    <string name="DialogNegativeButton">Cancel</string>
    <string name="FileUploading">your file is uploading..</string>
    <string name="DropboxUploaded1">your file has been uploaded to dropbox</string>
    <string name="DropboxUploaded2">now touch the tag again to write the link</string>
    <string name="TagWritten">the tag has been written successfully</string>
    <string name="savedFile">the file on the tag has been saved to:</string>
    <string name="path">/NfcSharedFiles</string>
    <string name="NotFormatable">Unable to format tag to NDEF</string>
    <string name="NotSupported">Tag doesn\'t seem to support NDEF format</string>
    <string name="ReadOnly">Read-only Tag!</string>
    <string name="NotEnoughSpace">Tag doesn\'t seem to have enough free space!</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="aboutDevelopedBy1">This app has been developed by:</string>
    <string name="aboutDevelopedBy2">Dominik Költringer &amp; Florian Schrofner</string>
    <string name="aboutIcons1">All the icons are licensed under:</string>
    <string name="aboutIcons2">Creative Commons-BY</string>
    <string name="aboutBy1">CloudUpload by Adam Whitcroft</string><string name="aboutBy2">Unicorn by Andrew McKinley</string>
    
    <string name="aboutBy3">Checkmark by Thomas Le Bas</string>
    <string name="aboutBy4">Save by Chris Dobbins</string>
    <string name="aboutBy5">Tag by Phil Goodwin</string>
    <string name="aboutBy6">Dots by Alex Fuller</string>
    <string name="aboutBy7">Folder &amp; Dropbox by Joe Harrison</string>
    <string name="thanks">We thank them for using their work</string>
    <string name="aboutLicense">This app is licensed under GPLv3</string>

</resources>
